Improve Java search validation exercise